fix job title word wrap for galaxy sII

--- a/content/css/styles.css.scss
+++ b/content/css/styles.css.scss
@@ -166,6 +166,7 @@ a:focus {
   right: 0;
   bottom: 0;
   line-height: 30px;
+  white-space: nowrap;
 }
 
 .timeline .time-period {
